--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,7 @@
 {
-  "name": "vue-todo",
-  "short_name": "vue-todo",
-  "icons": [
-    {
+  "name": "Nugs-Ternopil",
+  "short_name": "Nugs-T",
+  "icons": [{
       "src": "./img/icons/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
