--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,7 +7,7 @@
   "background_color": "#2196f3",
   "display": "standalone",
   "start_url": "/",
-  "scope": "https://nugs-ternopil.netlify.com/*/",
+  "scope": "https://nugs-ternopil.netlify.com/*",
   "icons": [{
       "src": "./images/icons/android-icon-36x36.png",
       "sizes": "36x36",
