--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,64 +3,64 @@
   "short_name": "Nugs-T",
   "description": "National Union Of Ghana Students Ternopil comprises of Ghanaian students, with the primary aim of protecting and safeguarding the rights and interests of Ghanaian students in Ternopil.",
   "lang": "en-US",
-  "theme_color": "#2196f3",
-  "background_color": "#2196f3",
+  "theme_color": "#000000",
+  "background_color": "#FFFFFF",
   "display": "standalone",
   "start_url": "/",
 
   "icons": [{
-      "src": "./images/icons/android-icon-36x36.png",
+      "src": "./img/icons/android-icon-36x36.png",
       "sizes": "36x36",
       "type": "image/png"
     }, {
-      "src": "./images/icons/android-icon-48x48.png",
+      "src": "./img/icons/android-icon-48x48.png",
       "sizes": "48x48",
       "type": "image/png"
     }, {
-      "src": "./images/icons/apple-icon-57x57.png",
+      "src": "./img/icons/apple-icon-57x57.png",
       "sizes": "57x57",
       "type": "image/png"
     }, {
-      "src": "./images/icons/apple-icon-60x60.png",
+      "src": "./img/icons/apple-icon-60x60.png",
       "sizes": "60x60",
       "type": "image/png"
     }, {
-      "src": "./images/icons/icon-72x72.png",
+      "src": "./img/icons/icon-72x72.png",
       "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "./images/icons/icon-96x96.png",
+      "src": "./img/icons/icon-96x96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "./images/icons/icon-128x128.png",
+      "src": "./img/icons/icon-128x128.png",
       "sizes": "128x128",
       "type": "image/png"
     },
     {
-      "src": "./images/icons/icon-144x144.png",
+      "src": "./img/icons/icon-144x144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "./images/icons/icon-152x152.png",
+      "src": "./img/icons/icon-152x152.png",
       "sizes": "152x152",
       "type": "image/png"
     },
     {
-      "src": "./images/icons/icon-192x192.png",
+      "src": "./img/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "./images/icons/icon-384x384.png",
+      "src": "./img/icons/icon-384x384.png",
       "sizes": "384x384",
       "type": "image/png"
     },
     {
-      "src": "./images/icons/icon-512x512.png",
+      "src": "./img/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
