--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "firebase": "^6.2.4",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
+    "vue-image-lightbox": "^6.3.1",
+    "vue-infinite-loading": "^2.4.4",
+    "vue-lazyload": "^1.3.1",
     "vue-meta": "^2.0.4",
     "vue-router": "^3.0.3",
     "vuetify": "^1.5.5",
