--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,53 +1,49 @@
 {
   "name": "Nugs-Ternopil",
-  "short_name": "Nugs-T",
-  "description": "National Union Of Ghana Students Ternopil comprises of Ghanaian students, with the primary aim of protecting and safeguarding the rights and interests of Ghanaian students in Ternopil.",
-  "lang": "en-US",
-  "theme_color": "#000000",
-  "background_color": "#FFFFFF",
-  "display": "standalone",
-  "start_url": "/",
-
+  "short_name": "Nugs-Ternopil",
   "icons": [{
-      "src": "img/icons/icon-72x72.png",
+      "src": "./img/icons/icon-72x72.png",
       "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "img/icons/icon-96x96.png",
+      "src": "./img/icons/icon-96x96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "img/icons/icon-128x128.png",
+      "src": "./img/icons/icon-128x128.png",
       "sizes": "128x128",
       "type": "image/png"
     },
     {
-      "src": "img/icons/icon-144x144.png",
+      "src": "./img/icons/icon-144x144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "img/icons/icon-152x152.png",
-      "sizes": "152x152",
+      "src": "./img/icons/icon-162x162.png",
+      "sizes": "162x162",
       "type": "image/png"
     },
     {
-      "src": "img/icons/icon-192x192.png",
+      "src": "./img/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "img/icons/icon-384x384.png",
+      "src": "./img/icons/icon-384x384.png",
       "sizes": "384x384",
       "type": "image/png"
     },
     {
-      "src": "img/icons/icon-512x512.png",
+      "src": "./img/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ],
-
+  "start_url": "./index.html",
+  "display": "standalone",
+  "background_color": "#000000",
+  "theme_color": "#fcd116"
 }
