removed trailing coma

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -48,5 +48,5 @@
   "theme_color": "#fcd116",
   "lang": "English",
   "orientation": "any",
-  "description": "National Union Of Ghana Students Ternopil comprises of Ghanaian students, with the primary aim of protecting and safeguarding the rights and interests of Ghanaian students in Ternopil.",
+  "description": "National Union Of Ghana Students Ternopil comprises of Ghanaian students, with the primary aim of protecting and safeguarding the rights and interests of Ghanaian students in Ternopil."
 }
