--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "firebase": "^6.2.4",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
+    "vue-google-adsense": "^1.6.0",
     "vue-image-lightbox": "^6.3.1",
     "vue-infinite-loading": "^2.4.4",
     "vue-lazyload": "^1.3.1",
     "vue-meta": "^2.0.4",
     "vue-router": "^3.0.3",
+    "vue-script2": "^2.1.0",
     "vuetify": "^1.5.5",
     "vuex": "^3.0.1"
   },
